# nostrava

./: .gitignore  AGENTS.md  LICENSE  README.md  index.html  justfile  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
.github/workflows/: ci.yml  release-android.yml
android/: .gitignore  AndroidManifest.snippet.xml  MainActivity.onCreate.snippet.kt  README.md  build.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/didit/app/: LocationBridge.kt  MainActivity.kt
android/app/src/main/java/com/didit/app/model/: Models.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/kotlin/: LocationBridge.kt  LocationService.kt
rust/: Cargo.toml
rust/src/: db.rs  jni_api.rs  jni_bridge.rs  lib.rs  location.rs  session.rs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  db.rs  jni_bridge.rs  lib.rs  location.rs  main.rs  metrics.rs  session.rs
src/components/: ElevationChart.tsx  PolylinePreview.tsx  RouteMap.test.tsx  RouteMap.tsx  SplitsTable.tsx
src/components/ui/: button.tsx  card.tsx  tabs.tsx
src/lib/: activities.ts  api.ts  apps.ts  format.ts  gymExercises.ts
src/pages/: ActivityHistory.tsx  ActivityHome.tsx  ActivitySummary.tsx  ActivityTrack.tsx  AppSelector.tsx  GymHistory.tsx  GymHome.tsx  GymLog.tsx  GymSummary.tsx  History.tsx  Home.tsx  Summary.tsx  Track.tsx
src/styles/: globals.css
(+29 files in other folders)
