[package]
name = "didit-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
description = "Personal local-only running/biking/gym tracker — core logic and Android JNI bridge"

[lib]
crate-type = ["cdylib"]
name = "didit_core"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
parking_lot = "0.12"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
jni = "0.21"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"

[profile.release]
opt-level = "s"
strip = true
lto = true
panic = "abort"
codegen-units = 1
