[package]
name = "didit"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
description = "Personal local-only running tracker"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]
name = "didit_lib"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
parking_lot = "0.12"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
thiserror = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

[profile.release]
opt-level = "s"
strip = true
lto = true
panic = "abort"
codegen-units = 1
